k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-lab-api
  namespace: sre-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sre-lab-api
  template:
    metadata:
      labels:
        app: sre-lab-api
    spec:
      containers:
        - name: api
          image: kind-sre-lab-api:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
