k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-lab-api
  namespace: sre-lab
spec:
  selector:
    app: sre-lab-api
  ports:
    - port: 80
      targetPort: 8000
