k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-lab-api
  namespace: sre-lab
spec:
  ingressClassName: nginx
  rules:
    - host: sre-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sre-lab-api
                port:
                  number: 80
